I corrected some places
